--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,5 @@
-<section class="hero container">
+<section class="hero">
+<div class="container">
 
     <div class="hero-header-div">
         <h1 class="hero-header">fresh harvest box is&nbsp;your&nbsp;one-stop place for a delicious fruit basket</h1>
@@ -88,4 +89,5 @@
             </div>
         </div>
     </div>
+</div>
 </section>
