--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,16 +1,17 @@
 .hero {
 background-color: #ae1332;
-border: 1px dashed blue;
+// outline: 1px dashed blue;
 }
 
 .hero-header-div {
-    margin: 56px auto -66px;
+    margin: 0 auto -66px;
+    padding-top: 56px;
     position: relative;
 }
 
 .hero-header {
     position: relative;
-    z-index: 999;
+    z-index: 1;
     width: 100%;
     height: 118px;
     font-weight: 500;
@@ -25,7 +26,7 @@ border: 1px dashed blue;
 
 .hero-header-img-strawberries {
     position: absolute;
-    top: 0px;
+    top: 56px;
     right: 0px;
     filter: blur(1px);
 }
@@ -91,12 +92,6 @@ border: 1px dashed blue;
     flex-direction: column;
     justify-content: center;
     width: 335px;
-}
-
-// problem with align item to the flex-start 
-.hero-fruits-li:nth-child(2) {
-    align-items: flex-start;
-    rotate: rotate(-14deg);
 }
 
 .fruit-desc {
@@ -211,4 +206,8 @@ border: 1px dashed blue;
 
 .anchor-li:nth-child(even) {
     width: 132px;
+}
+
+.fruit-desc-area {
+    padding-bottom: 60px;
 }
