--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -20,7 +20,6 @@
 }
 
 .footer-woman-image {
-  display: block;
   width: 300px;
 }
 
@@ -65,6 +64,14 @@
   height: 40px;
   border: 1px;
   margin: 10px;
+
+  transition: background-color 0.3s;
+}
+
+.footer-socials-logo:hover {
+  border-radius: 10px;
+  // fill: var(--bg-color);
+  background-color: pink;
 }
 
 .footer-menu {
@@ -102,16 +109,15 @@
 }
 
 @media screen and (min-width: 1280px) {
-  .footer-wrap {
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .footer-contact {
-    text-align: left;
-  }
-  .footer-menu {
+  .footer-tablet-wrap {
     display: flex;
     flex-direction: row;
+    align-items: center;
+  }
+  .footer-logo {
+    margin-bottom: 0;
+  }
+  .footer-menu {
+    margin: 0;
   }
 }
